@@ -5,6 +5,7 @@ git-annex (0.18) UNRELEASED; urgency=low
     (Did not affect ssh remotes.)
   * fsck: Fix bug in moving of corrupted files to .git/annex/bad/
   * migrate: Fix support for --backend option.
+  * unlock: Fix behavior when file content is not present.
   * Test suite improvements. Current top-level test coverage: 80%
 
  -- Joey Hess <joeyh@debian.org>  Tue, 11 Jan 2011 16:05:25 -0400
